--- a/templates/partials/_confirm.html
+++ b/templates/partials/_confirm.html
@@ -14,7 +14,7 @@
               <input id="delete_entry_id" type="hidden" name="id" value="0" class="form-control">
               <input type="hidden" name="utp_approved" value="{{ user_period.approved }}">
               <input type="hidden" name="utp_submitted" value="{{ user_period.submitted }}">
-
+              <input id="confirm_project_id" type="hidden" name="project_id" value="">
           </div>
 
           <p>
