--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -161,7 +161,7 @@ function getHoursBetweenDates(start, end) {
               {% endif %}
               <!-- Time Sheet Model -->
               <div class="modal fade" id="inquiryModal" role="dialog">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-lg">
                   <div class="modal-content">
                     <div class="modal-header">
                       <h5 class="modal-title" id="inquiryModalLabel">Timesheet Entry</h5>
