Changed __str__() return to date_time_in

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -223,6 +223,20 @@ function getHoursBetweenDates(start, end) {
                             {% endfor %}
                           </select>
                         </div>
+                        <p>
+                          <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
+                        </p>
+                        <div class="row">
+                          <div class="col">
+                            <div class="collapse multi-collapse" id="multiCollapseExample1">
+                              <div class="card card-body">
+                                Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                              </div>
+                            </div>
+                          </div>
+
+                        </div>
+
                         <hr>
                         {% if not user_period.submitted and not user_period.approved %}
                         <input type="submit" value="Add" class="btn btn-block btn-secondary" id="submitBtn" name="addOrUpdateBtn">
