Changed __str__() of TimesheetEntry to include project name

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -224,11 +224,11 @@ function getHoursBetweenDates(start, end) {
                           </select>
                         </div>
                         <p>
-                          <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
+                          <a class="btn btn-primary" data-bs-toggle="collapse" href="#expensePane" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Expenses</a>
                         </p>
                         <div class="row">
                           <div class="col">
-                            <div class="collapse multi-collapse" id="multiCollapseExample1">
+                            <div class="collapse multi-collapse" id="expensePane">
                               <div class="card card-body">
                                 Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
                               </div>
