--- a/templates/purchasing/companylist.html
+++ b/templates/purchasing/companylist.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 {% load render_table from django_tables2%}
-{% load bootstrap4%}
+{% load django_bootstrap5%}
 <script type="text/javascript">
   $(document).ready(function(){
     $('#add_{{ company_type }}_btn').on('click', function(){
