First commit of purchasing that includes forms for Purchase Orders, the start of Purchase Order Items, and the addition of materials and JSON descriptions.

--- a/templates/purchasing/company.html
+++ b/templates/purchasing/company.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'purchasing/base.html' %}
 
 {% block title %} | {{ company_type }} Management {% endblock %}
 
-{% block content %}
+{% block purchasing_content %}
 
 <script type="text/javascript">
   $(document).ready(function(){
