Added navigation in purchasing site.  Able to create new PO with button.  Added purchasing to SITE NAVIGATION

--- a/templates/partials/_navmenu.html
+++ b/templates/partials/_navmenu.html
@@ -5,6 +5,7 @@
         Site Navigation
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <a class="dropdown-item" href="{% url 'po-list' %}">Purchasing</a>
       {% if perms.timesheets.approve_timesheetentry %}
         <a class="dropdown-item" href="{% url 'managedashboard' %}">
           Timesheet Approvals
