--- a/templates/purchasing/purchaseorderlist.html
+++ b/templates/purchasing/purchaseorderlist.html
@@ -2,13 +2,16 @@
 {% load render_table from django_tables2%}
 {% load django_bootstrap5%}
 {% block purchasing_content%}
-
+<div class="row position-relative">
+  <div class="col-md-8">
+    <h5>Purchase Order List
+      <button class="btn primary-btn float-right" type="button" onclick="window.location.href='{% url 'po-create' %}'">Add Purchase Order</button>
+    </h5>
+  </div>
+</div>
 <div class="row position-relative">
 
   {% render_table table %}
-
-
-
 
 </div>
 
