--- a/templates/purchasing/purchaseorderupdate.html
+++ b/templates/purchasing/purchaseorderupdate.html
@@ -11,7 +11,6 @@
         {% csrf_token %}
         {{ form|crispy }}
 
-
         <input class="btn primary-btn"  type="submit" name="">
       </form>
 
@@ -23,7 +22,9 @@
 <div class="col">
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">Purchase Items</h5>
+      <h5 class="card-title">
+        Purchase Items
+      </h5>
       {% render_table table %}
     </div>
 
