Changed the background to light for vertical navigation menu.

--- a/templates/purchasing/base.html
+++ b/templates/purchasing/base.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="row vh-100 overflow-auto">
-    <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
+    <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-light d-flex sticky-top collapse" id="vert_nav_col">
           <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
               <a href="/" class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none">
                   <span class="fs-5">B<span class="d-none d-sm-inline">Brand</span></span>
@@ -91,6 +91,6 @@
         </section>
       <!-- </main> -->
     </div>
-  </div>
+  </div>-->
 
 {% endblock %}
